# FairWindPortal

./: .gitignore  .unibeautifyrc.json  Dockerfile  README.md  build.sh  generate_local_settings.py  manage.py  pyproject.toml  requirements.txt
FairWindPortal/: asgi.py  settings.py  urls.py  views.py  wsgi.py
accounts/: admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py  widgets.py
accounts/migrations/: 0001_initial.py  0002_auto_20220824_0210.py  0002_user_calendar_uuid.py  0003_user_calendar_uuid.py
contact/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_auto_20221214_1208.py  0003_alter_contactitems_parent.py  0004_auto_20221214_1401.py  0005_auto_20221214_1629.py  0006_alter_contactitem_summary.py  0007_alter_contactitem_summary.py  0008_alter_contactitem_summary.py  0009_alter_contact_event.py
events/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  widgets.py
events/migrations/: 0001_initial.py  0002_auto_20220827_2305.py  0004_schooldetail.py  (+21 more)
events_accounting/: admin.py  apps.py  forms.py  models.py  views.py
events_recruitment/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
events_reflection/: admin.py  apps.py  forms.py  models.py  views.py
fw_calendar/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
schools/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
shortener/: admin.py  apps.py  models.py  urls.py  views.py
static/: style.css
templates/: .djlintrc  base.html  breadcrumbs.html  index.html  toast.html
(+136 files in other folders)
