[tool.poetry]
name = "fairwindportal"
version = "0.1.0"
description = ""
authors = ["Gulmohar <92192914+vvihar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-bootstrap5 = "^23.1"
django-bootstrap-breadcrumbs = "^0.9.2"
Markdown = "^3.4.3"
reportlab = "^4.0.0"
psycopg2 = "^2.9.6"
icalendar = "^5.0.7"
dj-database-url = "^2.0.0"
chardet = "^5.1.0"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
djlint = "^1.30.0"
cssbeautifier = "^1.14.7"
jsbeautifier = "^1.14.7"
pylint = "^2.17.4"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
